# multi-copter-ctrl

./: CMakeLists.txt  README.md  package.xml
scripts/: control_client.py  control_client_sample.py  control_server.py  multi_copter_cmd.py
