<?xml version="1.0"?>
<package format="2">
  <name>multi_copter_ctrl</name>
  <version>0.0.0</version>
  <description>TODO: package discription</description>
  <maintainer email="3cjnm018@mail.u-tokai.ac.jp">GNagahashi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend -->
  <build_depend>std_msgs</build_depend>
  <build_depend>multi_copter_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <!-- build_export_depend -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>multi_copter_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <!-- exec_depend -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>multi_copter_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>